# chefiq-ble

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/chefiq_ble/: __init__.py  parser.py
tests/: __init__.py  test_parser.py
